# ostrov

./: pm2.json
backend/: Dockerfile  README.md  __main__.py  pyproject.toml
backend/backend/: asgi.py  urls.py
backend/backend/apps/camp/: admin.py  apps.py  models.py  serializers.py  views.py
backend/backend/apps/camp/migrations/: 0001_initial.py  0002_alter_camp_options_alter_campdetail_options_and_more.py  0002_alter_campdetail_ashore_alter_campdetail_connection_and_more.py  0003_alter_campdetail_pht_camping_and_more.py
backend/backend/apps/detection/: admin.py  apps.py  models.py  serializers.py  views.py
backend/backend/apps/detection/migrations/: 0001_initial.py
backend/backend/apps/map/: apps.py  views.py
backend/backend/apps/weather/: admin.py  models.py  serializers.py  views.py
backend/backend/apps/weather/migrations/: 0001_initial.py
backend/backend/settings/: dev.py
bot/: pyproject.toml
bot/app/: __main__.py  commands.py  settings.py
bot/app/dialogs/: __init__.py  dialogs.py  states.py
qgis2web/: __main__.py  app.py  index.html  pyproject.toml  template.py
qgis2web/data/: kilpolashelters_2.js  kilpolashelters_4.js  landscape_1.js  landscape_3.js  maxar_may_2022_1.png.aux.xml  maxar_may_2022_p2_0.png.aux.xml  rivers_3.js  rivers_4.js  rivers_6.js  roads_3.js  roads_5.js  topo_clip_0.png.aux.xml
qgis2web/layers/: landscape_1.js  layers.js  roads_2.js
qgis2web/resources/: qgis2web.js
qgis2web/static/: index.html
qgis2web/static/data/: 19181944_0.png.aux.xml  _3.js  _4.js  _5.js  _6.js  _7.js  _8.js  _9.js  sentinel182023_2.png.aux.xml
qgis2web/styles/: landscape_1_style.js  rivers_3_style.js  roads_2_style.js
(+5 files in other folders)
