[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Artem <artem00561@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
