[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Artem <artem00561@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
redis = "^4.6.0"
aiogram-dialog = {version = "^2.0.0b21", allow-prereleases = true}
pydantic = {extras = ["dotenv"], version = "^2.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
